pycpptraj/log
missing cimport in module '.utility': /mnt/raidc/haichit/anaconda/lib/python2.7/site-packages/Cython-0.22pre-py2.7-linux-x86_64.egg/Cython/Includes/libcpp/set.pxd
Compiling Command.pyx because it changed.
Cythonizing Command.pyx
running build_ext
building 'Command' extension
gcc -pthread -fno-strict-aliasing -g -O2 -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -fPIC -I/mnt/raidc2/haichit/Study/Cython/pycpptraj/pycpptraj -I/mnt/raidc2/haichit/Study/Cython/pycpptraj/pycpptraj/Analysis/ -I/mnt/raidc2/haichit/Study/Cython/pycpptraj/pycpptraj/Action/ -I/mnt/raidc/haichit/AMBER14_official.naga84.forPythonTest.2//AmberTools/src/cpptraj/src/ -I/mnt/raidc/haichit/AMBER14_official.naga84.forPythonTest.2//include/ -I/mnt/raidc/haichit/anaconda/include/python2.7 -c Command.cpp -o build/temp.linux-x86_64-2.7/Command.o
cc1plus: warning: command line option ‘-Wstrict-prototypes’ is valid for C/ObjC but not for C++ [enabled by default]
Command.cpp:728:9: error: ‘DispatchAllocatorType’ does not name a type
 typedef DispatchAllocatorType __pyx_t_9pycpptraj_7Command_AllocType;
         ^
Command.cpp:746:99: error: ‘__pyx_t_9pycpptraj_7Command_AllocType’ has not been declared
 typedef Command::RetType (*__pyx_t_9pycpptraj_7Command_CommandFxnType)(CpptrajState &, ArgList &, __pyx_t_9pycpptraj_7Command_AllocType);
                                                                                                   ^
Command.cpp:776:3: error: ‘__pyx_t_9pycpptraj_7Command_AllocType’ does not name a type
   __pyx_t_9pycpptraj_7Command_AllocType Alloc;
   ^
Command.cpp:1553:42: error: expected unqualified-id before ‘&&’ token
 static __pyx_t_9pycpptraj_7Command_Token &&__pyx_f_9pycpptraj_7Command_7Command_CmdToken(struct __pyx_obj_9pycpptraj_7Command_Command *__pyx_v_self, int __pyx_v_idx); /* proto*/
                                          ^
Command.cpp:2646:42: error: expected unqualified-id before ‘&&’ token
 static __pyx_t_9pycpptraj_7Command_Token &&__pyx_f_9pycpptraj_7Command_7Command_CmdToken(struct __pyx_obj_9pycpptraj_7Command_Command *__pyx_v_self, int __pyx_v_idx) {
                                          ^
Command.cpp: In function ‘void initCommand()’:
Command.cpp:3010:148: error: ‘__pyx_f_9pycpptraj_7Command_7Command_CmdToken’ was not declared in this scope
   __pyx_vtable_9pycpptraj_7Command_Command.CmdToken = (__pyx_t_9pycpptraj_7Command_Token &(*)(struct __pyx_obj_9pycpptraj_7Command_Command *, int))__pyx_f_9pycpptraj_7Command_7Command_CmdToken;
                                                                                                                                                    ^
error: command 'gcc' failed with exit status 1
